# bpmn-assistant

./: .gitignore  README.md  bpmn_assistant.Dockerfile  pyproject.toml  render.yaml  requirements.txt  start_frontend  start_layout_server  start_middleware
.github/workflows/: ci.yml
scripts/: run-dev.sh
src/bpmn_assistant/: .dockerignore  .env.example  Dockerfile  Makefile  app.py
src/bpmn_assistant/api/: requests.py
src/bpmn_assistant/config/: log_config.py
src/bpmn_assistant/core/: __init__.py  llm_facade.py  llm_provider.py  provider_factory.py  schemas.py
src/bpmn_assistant/prompts/: bpmn_examples.jinja2  bpmn_representation.jinja2  create_bpmn.txt  define_change_request.jinja2  define_change_request.txt  determine_intent.jinja2  determine_intent.txt  edit_bpmn.jinja2  edit_bpmn.txt  edit_bpmn_intermediate_step.jinja2  edit_bpmn_intermediate_step.txt  make_final_comment.jinja2  prompt_template_processor.py  respond_to_query.jinja2
src/bpmn_assistant/services/: bpmn_json_generator.py  bpmn_modeling_service.py  bpmn_process_transformer.py  bpmn_xml_generator.py  conversational_service.py  determine_intent.py  validate_bpmn.py
src/bpmn_assistant/utils/: utils.py
src/bpmn_frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
src/bpmn_layout_server/: server.js
tests/: conftest.py
tests/fixtures/: inclusive_gateway.bpmn  inclusive_next.bpmn  parallel_gateway_no_join.bpmn  two_start_events.bpmn
tests/services/: test_bpmn_json_generator.py  test_bpmn_modeling_service.py  test_bpmn_process_transformer.py  test_bpmn_xml_generator.py
(+26 files in other folders)
